# DeepMatrixInversion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
Dataset/: Makefile  dataset_matrix_3x3.mx  generatedataset  generatedataset.c  sing_moore-penrose_inverse_3x3.mx  target_matrix_3x3.mx  train_matrix_3x3.mx  train_target_inverse_3x3.mx  val_matrix_3x3.mx
Dataset/data1/: sing_matrix_3x3.mx  train_matrix_3x3.mx  train_target_inverse_3x3.mx  val_matrix_3x3.mx  val_target_inverse_3x3.mx
Dataset/data2/: sing_matrix_3x3.mx  sing_moore-penrose_inverse_3x3.mx  train_matrix_3x3.mx  train_target_inverse_3x3.mx  val_matrix_3x3.mx  val_target_inverse_3x3.mx
Model/: dataset_matrix_3x3.mx  extdataset_matrix_3x3_topred.mx  exttarget_matrix_3x3_ground_true.mx  lossexample.py  nnmodel.py  predict.py  run.x  sing_prediction.csv  singular_matrix_to_test.mx  target_matrix_3x3.mx  train.py  val_prediction.csv  val_prediction_extrapolation.csv  val_prediction_interpolation.csv
data/: 10000_rmin-1_rmax1_matrices_3x3.mx  10000_rmin-1_rmax1_matrices_inverted_3x3.mx  10000_rmin-1_rmax1_matrices_neuralnet_inverted_3x3.mx  10000_rmin-1_rmax1_singular_matrices_3x3.mx  10000_rmin-1_rmax1_singular_matrices_neuralnetwork_inverted_3x3.mx  10000_rmin-1_rmax1_singular_matrices_pseudoinverted_3x3.mx
examples/: README.md  benchmark_inversion.py  mlr_box_draper.py  simple_ols_3x3.py
jobs/: run.x
models/: README.md
tests/: lossexample.py  test_dataset.py  test_inference.py  test_io.py  test_loss.py  test_nnmodel.py  test_schur_recursive.py
(+83 files in other folders)
